# BlitzLLM

./: .gitignore  GITHUB_SECRETS_SETUP.md  README.md  config.py  database_pool.py  llm.py  main.py  prompts.py  requirements.txt  schema.sql  twitter_bot.py  utils.py
.cursor/rules/: mintlify.mdc
.github/workflows/: nba-workflow.yml
agents/: AUTOMATION_OPTIONS.md  NBA_Workflow_Setup_Guide.md  demo_nba_workflow_simple.py  manage_nba_workflow.sh  mention_listener_nba.py  nba_crontab.txt  nba_scheduler.py  nba_workflow.py  nba_workflow_requirements.txt  processed_tweets.txt  production_ready_nba.py  run_both_bots.py  run_production_nba.sh  test_nba_workflow_agno.py
b2b/: README.md  constants.py  llm.py  main.py  prompts.py
b2b/widget/: conversation_widget.css  conversation_widget.js  example.html
blitz/: DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  start.sh  test_mcp_protocol.py
blitz/examples/: eval_examples.py
blitz/src/blitzagent_agno/: __init__.py  agent.py  agent_factory.py  app.py  cli.py  config.py  playground.py  production_app.py  semantic_memory.py  server.py  tools.py
blitz/src/blitzagent_agno/evals/: accuracy_eval.py  performance_eval.py
blitzagent/: .dockerignore  Dockerfile  README.md  RENDER_DEPLOYMENT.md  config.py  main.py  render_start.sh  requirements.txt  start.sh
blitzagent-agno/: AGENT_ARCHITECTURE.md  README.md  WORKFLOW_AND_MODEL_SWITCHING.md  config.json  debug_agent_id.py  discover_endpoints.py  pyproject.toml  requirements.txt  simple_test.py  test_deployment.py
blitzagent-agno/examples/: eval_examples.py
blitzagent-agno/src/blitzagent_agno/: agent.py  agent_factory.py  app.py  cli.py  config.py  exceptions.py  mcp_client.py  memory.py  metrics.py  models.py  playground.py
blitzagent-agno/src/blitzagent_agno/evals/: __init__.py  accuracy_eval.py  eval_runner.py  reliability_eval.py
blitzagent-mastra/: config.json  package-lock.json  package.json  tsconfig.json
blitzagent-mastra/.mastra/output/: index.mjs  index.mjs.map  package-lock.json
blitzagent-mastra/scripts/: copy-assets.js  fetch-all-documents.js  upload-to-cosmos.js
blitzagent-mastra/src/mastra/: config.ts  index.ts  mcp.ts
blitzagent-mastra/src/mastra/agents/: generate-queries-agent.ts  sports-insights-agent.ts  streaming-example.ts
blitzagent/docs/: authentication.mdx  configuration.mdx  docs.json  examples.mdx  index.mdx  quickstart.mdx  troubleshooting.mdx
blitzagent/docs/api-reference/: analyze.mdx  health.mdx  introduction.mdx  openapi.json  stream.mdx
blitzagent/docs/features/: data-sources.mdx  multi-league-support.mdx  streaming-analysis.mdx
blitzagent/docs/workflows/: chatbot-integration.mdx  overview.mdx  predictive-analytics.mdx  social-media-automation.mdx
mcp/: COFOUNDER_SETUP.md  Dockerfile  PACKAGING.md  README.md  RENDER_DEPLOYMENT.md  TESTING_GUIDE.md  config.json  debug_mcp.py  inspector_main.py  inspector_server.py  mcp_config_example.json  pyproject.toml  release.sh  requirements.txt  start.sh  start_render.sh  test_tools.py
mcp/blitz_agent_mcp/: __init__.py  config.json  config.py  main.py  utils.py
mcp/blitz_agent_mcp/models/: __init__.py  connection.py  database.py  query.py  table.py
mcp/blitz_agent_mcp/schemas/: mlb-schema.md  nba-schema.md
mcp/blitz_agent_mcp/tools/: __init__.py  api.py  betting.py  graph.py  inspect.py  linear_regression.py  modify.py  query.py  recall.py  sample.py  search_tables.py  test.py  tools_setup.py  upload.py  validate.py
mcp/src/: config.py  main.py  utils.py
mcp/src/models/: __init__.py  connection.py  database.py  query.py  table.py
mcp/src/tools/: __init__.py  api.py  db_docs.py  graph.py  linear_regression.py  recall.py  sample.py  scan.py  search_tables.py  test.py  upload.py  validate.py  webscrape.py
mcp/twitter_mcp/: __init__.py  main.py  pyproject.toml
pydantic-agent/: config.py  main.py  requirements.txt  stream_viewer.html
twitteragent/: README.md  config.py  env.example  execution_log.json  main.py  processed_tweets.json  requirements.txt  start.sh  twitter_agent.py  worker.py  worker_status.json
twitterbot/: README.md  requirements.txt  start.sh
widget/: Chat.js  README.md  conversation_widget.css  conversation_widget.js  example.html
~/.cursor/: mcp.json
